data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_303.wast
;; 4. **Test Description:**    - Introduce a block within a function with an `if` condition that will always lead to a `br` instruction targeting an invalid label, subsequently hitting `unreachable`.    - **Constraint: Target Label Validity**    - **Differential Behavior: The Wizard Engine should recognize the invalid jump and throw an error, whereas WebAssembly might erroneously encounter `unreachable`.**

(assert_invalid
  (module
    (func $invalid-label-br
      (block
        (if (i32.const 1)
          (then
            (br 1)
          )
        )
        (unreachable)
      )
    )
  )
  "unknown label"
)